# dio-chacon-wifi-api

./: .gitignore  .pre-commit-config.yaml  Protocol.md  README.md  mkdocs.yml  pyproject.toml
docs/: api.md  asyncapi.yaml  opencollection.yml  requirements.txt
src/dio_chacon_wifi_api/: __init__.py  client.py  const.py  exceptions.py  session.py  utils.py
tests/: aiohttp_fake_server_utils.py  test_client.py  test_const.py  test_exception.py  test_integrations.py  test_integrations_doorbell.py  test_integrations_light.py  test_integrations_shutter.py  test_integrations_switch.py  test_session.py  test_utils.py
