[tool.poetry]
name = "dio-chacon-wifi-api"
version = "0.1.0"
description = "Python library for DIO Chacon wifi's protocol for shutters and switches"
authors = ["cnico"]
license = "GPL v3"
readme = "README.md"
homepage = "https://github.com/cnico/dio-chacon-wifi-api"
repository = "https://github.com/cnico/dio-chacon-wifi-api"
documentation = "https://dio-chacon-wifi-api.readthedocs.io"
keywords = ["dio", "chacon", "shutter", "api"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL v3",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"