[tool.poetry]
name = "dio-chacon-wifi-api"
version = "0.1.0"
description = "Python library for DIO Chacon wifi's protocol for shutters and switches"
authors = ["cnico"]
license = "GNU Lesser General Public License v3 or later (LGPLv3+)"
readme = "README.md"
homepage = "https://github.com/cnico/dio-chacon-wifi-api"
repository = "https://github.com/cnico/dio-chacon-wifi-api"
documentation = "https://dio-chacon-wifi-api.readthedocs.io"
keywords = ["dio", "chacon", "shutter", "api"]
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
black = "^24.2.0"
ruff = "^0.2.1"
pre-commit = "^3.6.1"
flake8 = "^7.0.0"
debugpy = "^1.8.1"
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.3"
markdown-include = "^0.8.1"
mkdocstrings-python = "^1.9.2"
pytest-aiohttp = "^1.0.5"
aioresponses = "^0.7.6"
coverage = "^7.4.4"
codecov = "^2.1.13"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"

# Cf : https://laszlo.substack.com/p/cq4ds-python-project-from-scratch
[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

[tool.flake8]
max-line-length = 120
